Dummy_Package_for_scratch_org/main/default/objects/Selenium_Locator__c/Selenium_Locator__c.object-meta.xml
<CustomObject>
    <label>Selenium Locator</label>
    <nameField>
        <displayFormat>SL-{00000}</displayFormat>
        <label>Selenium Locator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selenium Locators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>