Dummy_Package_for_scratch_org/main/default/objects/Selenium_Locator__c/fields/Locator__c.field-meta.xml
<CustomField>
    <fullName>Locator__c</fullName>
    <inlineHelpText>Selenium locator that identifies the element on the page.</inlineHelpText>
    <label>Locator</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>