Dummy_Package_for_scratch_org/main/default/objects/Selenium_Locator__c/fields/Locator_ID__c.field-meta.xml
<CustomField>
    <fullName>Locator_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This value is user defined. When setting a Locator ID then this can be use on Selenium Test Cases scripts as {!Locator.ID} e.g.: {!Locator.ACCOUNT_SAVE_BUTTON}</inlineHelpText>
    <label>Locator ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>