Dummy_Package_for_scratch_org/main/default/objects/Selenium_Locator__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <inlineHelpText>Used to give context for the locator. It can be any text.
Copado Recorder will automatically set the page title when recording.</inlineHelpText>
    <label>Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>