Dummy_Package_for_scratch_org/main/default/objects/Selenium_Locator__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Page__c</columns>
    <columns>Locator__c</columns>
    <columns>Locator_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>